fix bottom content overlap

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,3 +1,7 @@
+.bar-nav ~ .content {
+    padding-bottom: 44px;
+}
+
 .hidden {
     display: none;
 }
